public class Bicicleta extends Vehículo{

	public Bicicleta() {
		super(2, 1);
	}

	@Override
	public void alistarSeguridad(){
		ponerCasco();
	}

	private void ponerCasco(){

	}
}